--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r app/requirements.txt
-          pip install paramiko jinja2 click
+          pip install paramiko jinja2 click requests
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
